--- a/templates/layout.html
+++ b/templates/layout.html
@@ -100,7 +100,7 @@
       {% include "partials/nav.html" -%}
     </nav>
     {% block header %}
-    <header class="grid">
+    <header class="centered-column">
       <a href="/">
         <img
           class="logo-inline"
@@ -131,7 +131,7 @@
       {% endblock -%}
     </main>
 
-    <footer class="grid bg-light-blue">
+    <footer class="centered-column bg-light-blue">
       {% block footer -%}
       <img
         class="logo-inline"
