--- a/templates/1-column.html
+++ b/templates/1-column.html
@@ -3,7 +3,7 @@
 {{ super() }}
 {% endblock -%}
 {% block main -%}
-<section class="grid">
+<section class="centered-column">
   {% if page.content is defined -%}{{ page.content | safe }}{% endif -%}
   {% if section.content is defined -%}{{ section.content | safe }}{% endif -%}
 </section>
