--- a/templates/index.html
+++ b/templates/index.html
@@ -117,7 +117,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 
   <ol>
     <li>Learn <a href="/values">Our Values</a></li>
-    <li>Check out <a href="/values">The Retreat Recipe</a></li>
+    <li>Check out <a href="/recipe">The Retreat Recipe</a></li>
     <li>Know <a href="/what-to-expect">What to Expect on Your Retreat</a></li>
   </ol>
 
