Add zines retreat link to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 <section class="centered-column bg-img-hills" id="program">
   <h2 id="program">2023 Retreat Programs</h2>
   <ul class="programs">
+    <li><a href="/2023/zines/">Tech Zines Retreat</a></li>
     <li><a href="/2023/programming/">Programming Retreats for 2023</a></li>
     <li><a href="/2023/inktober/">InkTober Retreats for 2023</a></li>
   </ul>
