--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,11 +17,11 @@
 
     {% endblock meta -%} {# Formatting is weird here to avoid leading/trailing
     whitespace within tags #}
-    <title>{% block title -%}
-    {% if page.title is defined and page.title -%}{{ page.title }}|{%- endif -%}
-    {% if section.title is defined and section.title -%}{{ section.title }}|{% endif -%}
-    {{ config.extra.company_name }}{% endblock title -%}</title>
-
+    {# fallback default #}
+    {% set title = config.extra.company_name %}
+    {% if page.title is defined and page.title -%}{% set title = page.title ~ "|" ~ config.extra.company_name %}{%- endif -%}
+    {% if section.title is defined and section.title -%}{% set title = section.title ~ "|" ~ config.extra.company_name %}{%- endif -%}
+    <title>{% block title -%}{{ title }}{% endblock title -%}</title>
     {% include "partials/google-fonts.html" %}
     <link rel="stylesheet" href="/screen.css" />
     <link
@@ -49,21 +49,10 @@
     <meta name="twitter:card" content="summary_image_large" />
     {# Formatting is weird here to avoid leading/trailing whitespace within tags
     #}
-    <meta
-      name="twitter:title"
-      content="{% if page.title is defined
-    -%}{{ page.title }}|{{ config.extra.company_name }}{%
-    else
-    -%}{{ config.extra.company_name }} - Immersive project/learning retreats in northern New York{%
-    endif -%}"
-    />
+    <meta name="twitter:title" content="{{ title }}" />
     <meta
       name="twitter:description"
-      content="{% if page.description is defined
-    -%}{{ page.description }}{%
-    else
-    -%}{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions.{%
-    endif -%}"
+      content="{{ config.extra.company_name }} runs retreats for coding, illustration, writing, learning new skills, and working groups.}}"
     />
     <meta name="twitter:image" content="/images/frc-logo.jpg" />
     <meta name="twitter:site" content="@focusretreats" />
@@ -71,21 +60,10 @@
     <!-- Facebook -->
     <meta property="og:url" content="https://focusretreatcenter.com" />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:title"
-      content="{% if page.title is defined
-    -%}{{ page.title }}|{{ config.extra.company_name }}{%
-    else
-    -%}{{ config.extra.company_name }} - Immersive project/learning retreats in northern New York{%
-    endif -%}"
-    />
+    <meta property="og:title" content="{{ title }}" />
     <meta
       property="og:description"
-      content="{% if page.description is defined
-    -%}{{ page.description }}{%
-    else
-    -%}{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions.{%
-    endif -%}"
+      content="{{ config.extra.company_name }} runs retreats for coding, illustration, writing, learning new skills, and working groups.}}"
     />
     <meta
       property="og:image"
