Make blockquotes bold

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -41,6 +41,7 @@
 blockquote {
   background-color: $brand-light-blue;
   font-style: italic;
+  font-weight: bold;
   color: white;
   padding: 0.8em;
   border-radius: $pad;
