--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
     working groups.
   </h4>
 
-  <h4>Located in Malone, NY just north of Adirondack Park.</h4>
+  <h4>We are located in Malone, NY just north of Adirondack Park.</h4>
 </section>
 
 <section class="centered-column imagine">
@@ -80,7 +80,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 <section class="centered-column bg-img-hills" id="program">
   <h2 id="program">2023 Retreat Programs</h2>
   <ul class="programs">
-    <li><a href="/2023/technical-debt-with-chelsea-troy/">Technical Debt with Chelsea Troy</a></li>
+    <li><a href="/2023/technical-debt-with-chelsea-troy/">Tackling Technical Debt with Chelsea Troy</a></li>
     <li><a href="/2023/technical-education-with-chelsea-troy/">Technical Education Summit</a></li>
     <li><a href="/2023/zines/">Tech Zines Retreat</a></li>
     <li><a href="/2023/programming/">Programming Retreats for 2023</a></li>
