Fix spacing for LinkedIn link

--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
                 fill="currentColor"
               ></path>
             </g>
-          </svg>
+          </svg>&nbsp;
           LinkedIn</a
         >
       </p>
