HTML validation tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 </section>
 
 <section class="centered-column bg-img-hills" id="program">
-  <h2 id="program">2023 Retreat Programs</h2>
+  <h2>2023 Retreat Programs</h2>
   <ul class="programs">
     <li><a href="/2023/technical-debt-with-chelsea-troy/">Tackling Technical Debt with Chelsea Troy</a></li>
     <li><a href="/2023/technical-education-with-chelsea-troy/">Technical Education Summit</a></li>
@@ -96,10 +96,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   </p>
   <p>
     Email us at
-    <a
-      href="mailto:team@focusretreatcenter.com?subject=Winter Residency Inquiry"
-      >team@focusretreatcenter.com</a
-    >
+    <a href="mailto:team@focusretreatcenter.com?subject=Winter+Residency+Inquiry">team@focusretreatcenter.com</a>
     if you might be interested.
   </p>
 </section>
