HTML lint fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" -%} {# Intentionally no header block super() on the
 home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 <section class="centered-column hero">
-  <img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" />
+  <img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}">
   <h2>Inspire. Create. Collaborate.</h2>
 </section>
 
@@ -42,8 +42,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   </p>
   <img
     src="/images/frc-building-front-20220504.jpg"
-    alt="Our building in May 2022"
-  />
+    alt="Our building in May 2022">
 </section>
 
 <section class="centered-column bg-img-forest">
@@ -123,8 +122,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 
   <img
     src="photos/retreats-2022/cinnamon-tear-and-share.jpg"
-    alt="Freshly baked cinnamon tear and share"
-  />
+    alt="Freshly baked cinnamon tear and share">
 </section>
 
 <section class="centered-column">
@@ -141,7 +139,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
       class="hosts"
       src="/images/photoshoot-202205/ck-pl-hex01-crop.jpg"
       alt="Pete and Stella"
-    />
+   >
     <h2>About Your Hosts</h2>
 
     <p>
@@ -170,13 +168,13 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
     <div class="social">
       <p>
         <a href="https://twitter.com/focusretreats" target="_blank">
-          <img src="/images/twitter-icon.png" alt="twitter link" />
+          <img src="/images/twitter-icon.png" alt="twitter link">
           &nbsp;Follow us on Twitter
         </a>
       </p>
       <p>
         <a href="https://www.instagram.com/focusretreat.center" target="_blank">
-          <img src="/images/instagram.png" alt="instagram link" />
+          <img src="/images/instagram.png" alt="instagram link">
           &nbsp;Follow us on Instagram
         </a>
       </p>
@@ -185,7 +183,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
           href="https://www.facebook.com/Focus-Retreat-Center-110276811571971"
           target="_blank"
         >
-          <img src="/images/facebook.png" alt="facebook link" />
+          <img src="/images/facebook.png" alt="facebook link">
           &nbsp;Like us on Facebook
         </a>
       </p>
@@ -221,8 +219,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <div>
     <img
       src="/images/frc-building-side.jpg"
-      alt="{{ config.extra.company_name }} Building"
-    />
+      alt="{{ config.extra.company_name }} Building">
     <h2>About Our Center</h2>
     <p>
       Our retreat center is located in the heart of the Village of Malone. All
@@ -246,40 +243,32 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 <section class="gallery-nogap">
   <img
     src="photos/retreats-2022/inktober-certificates.jpg"
-    alt="Guests celebrating completing the InkTober illustration challenge"
-  />
+    alt="Guests celebrating completing the InkTober illustration challenge">
   <img
     src="azure-mountain-fire-tower.jpg"
-    alt="Stunning view of the mountains, forest, and lakes from Azure Mountain"
-  />
-  <img src="crumb-cake.jpg" alt="Home made crumb cake fresh from the oven" />
+    alt="Stunning view of the mountains, forest, and lakes from Azure Mountain">
+  <img src="crumb-cake.jpg" alt="Home made crumb cake fresh from the oven">
   <img
     src="inktober-common-room.jpg"
-    alt="Guests working on InkTober illustrations together"
-  />
+    alt="Guests working on InkTober illustrations together">
   <img
     src="denise-dining.jpg"
-    alt="Guests conduct a social media workshop in the dining room"
-  />
+    alt="Guests conduct a social media workshop in the dining room">
   <img
     src="photos/retreats-2022/pad-thai-prep.jpg"
-    alt="Ingredients prepped for pad thai night"
-  />
+    alt="Ingredients prepped for pad thai night">
   <img
     src="photos/retreats-2022/programming-usie.jpg"
-    alt="Creative Coding Retreat guests"
-  />
-  <img src="cinnamon-rolls.jpg" alt="Home made cinnamon rolls" />
-  <img src="megan-laugh.jpg" alt="Guest laughs while sketching on a hike" />
+    alt="Creative Coding Retreat guests">
+  <img src="cinnamon-rolls.jpg" alt="Home made cinnamon rolls">
+  <img src="megan-laugh.jpg" alt="Guest laughs while sketching on a hike">
   <img
     src="photos/retreats-2022/hike-lake-overlook.jpg"
-    alt="Scenic view of mountains and lakes from a hiking trail"
-  />
-  <img src="/images/gallery/hike-selfie.jpg" alt="hiking selfie" />
+    alt="Scenic view of mountains and lakes from a hiking trail">
+  <img src="/images/gallery/hike-selfie.jpg" alt="hiking selfie">
   <img
     src="hike-boulder-autumn.jpg"
-    alt="Climbing around some boulders on an autumn hike"
-  />
+    alt="Climbing around some boulders on an autumn hike">
 </section>
 
 <section class="centered-column bg-honey">
@@ -291,7 +280,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <a class="phone" href="tel:+15183108879">518-310-8879</a>
   <a
     class="brand-button"
-    href="mailto:team@focusretreatcenter.com?subject=Website Retreat Inquiry"
+    href="mailto:team@focusretreatcenter.com?subject=Website+Retreat+Inquiry"
     >Contact us for more info</a
   >
 </section>
