--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <ul class="programs">
     <li><a href="/2023/technical-debt-with-chelsea-troy/">Tackling Technical Debt with Chelsea Troy</a></li>
     <li><a href="/2023/zines/">Tech Zines Retreat</a></li>
-    <li><a href="/2023/programming/">Programming Retreats for 2023</a></li>
+    <li><a href="/2023/senior-engineer-mindset/">Senior Engineer Mindset with Swizec Teller</a></li>
     <li><a href="/2023/inktober/">InkTober Retreats for 2023</a></li>
   </ul>
 
