Update residency copy

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,16 +85,14 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
     <li><a href="/2023/inktober/">InkTober Retreats for 2023</a></li>
   </ul>
 
-  <h3>Winter Residencies</h3>
+  <h3>Residencies</h3>
+
+  <p>Need some time to do a batch of deep work on your project? Feeling burnt out and want to do some unstructured creative work? Feeling stuck in a rut and need a change of scene and pace? A residency at FRC may be just what you need!
+  </p>
 
   <p>
-    We don't run retreats in the winter off season, but we do have residencies
-    available if you are interested in a change of scene and coliving with other
-    creative people for a few weeks/months during the 2022/2023 winter.
-  </p>
-  <p>
-    Email us at
-    <a href="mailto:team@focusretreatcenter.com?subject=Winter+Residency+Inquiry">team@focusretreatcenter.com</a>
+  Spring through Fall we offer individual and small group residencies alongside our group retreat programs. Email us at
+    <a href="mailto:team@focusretreatcenter.com?subject=Residency+Inquiry">team@focusretreatcenter.com</a>
     if you might be interested.
   </p>
 </section>
