GSoC landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <h2>2023 Retreat Programs</h2>
   <ul class="programs">
     <li><a href="/2023/zines/">Tech Zines Retreat</a></li>
+    <li><a href="/2023/google-summer-of-code/">Google Summer of Code Retreat</a></li>
     <li><a href="/2023/senior-engineer-mindset/">Senior Engineer Mindset with Swizec Teller</a></li>
     <li><a href="/2023/inktober/">InkTober Retreats for 2023</a></li>
   </ul>
