Inktober has lowercase t apparently

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 <section class="centered-column">
   <blockquote>
     "It's been so amazing and I feel so happy because it's not just I got the
-    goal done, but you were all supporting me. I've been doing InkTober since at
+    goal done, but you were all supporting me. I've been doing Inktober since at
     least 2016 and I've never gotten 31 drawings done before." &mdash;Denise
   </blockquote>
 </section>
@@ -81,7 +81,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <ul class="programs">
     <li><a href="/2023/zines/">Tech Zines Retreat</a></li>
     <li><a href="/2023/senior-engineer-mindset/">Senior Engineer Mindset with Swizec Teller</a></li>
-    <li><a href="/2023/inktober/">InkTober Retreats for 2023</a></li>
+    <li><a href="/2023/inktober/">Inktober Retreats for 2023</a></li>
   </ul>
 
   <h3>Residencies</h3>
@@ -239,14 +239,14 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 <section class="gallery-nogap">
   <img
     src="photos/retreats-2022/inktober-certificates.jpg"
-    alt="Guests celebrating completing the InkTober illustration challenge">
+    alt="Guests celebrating completing the Inktober illustration challenge">
   <img
     src="azure-mountain-fire-tower.jpg"
     alt="Stunning view of the mountains, forest, and lakes from Azure Mountain">
   <img src="crumb-cake.jpg" alt="Home made crumb cake fresh from the oven">
   <img
     src="inktober-common-room.jpg"
-    alt="Guests working on InkTober illustrations together">
+    alt="Guests working on Inktober illustrations together">
   <img
     src="denise-dining.jpg"
     alt="Guests conduct a social media workshop in the dining room">
