Overhaul approach to youtube videos
* Don't need a wrapper div anymore
* No padding tricks, use aspect-ratio
* Learned from https://dev.to/deammer/embed-responsive-youtube-videos-in-2021-5dkh
* Add Inktober logo to landing page

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,6 +1,6 @@
 @import "core-layout";
 
-p {
+p, .video-portrait, .video-landscape {
   margin: 0;
   margin-bottom: 0.6em;
 }
@@ -9,6 +9,10 @@ section.centered-column, header.centered-column {
   @include centered-column;
   img {
     margin-bottom: $pad;
+  }
+
+  > p > img {
+    margin-bottom: 0;
   }
 }
 
