--- a/templates/shortcodes/youtube.html
+++ b/templates/shortcodes/youtube.html
@@ -1,3 +1,1 @@
-<div class="youtube-video-container {% if orientation %}{{orientation}}{% endif %}">
-<iframe src="https://www.youtube-nocookie.com/embed/{{id}}" allowfullscreen></iframe>
-</div>
+<iframe class="video-{{orientation}}" src="https://www.youtube-nocookie.com/embed/{{id}}" allowfullscreen></iframe>
