Inktober landing page edits from Mattie Reyes

--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   <ul class="programs">
     <li><a href="/2023/zines/">Tech Zines Retreat</a></li>
     <li><a href="/2023/senior-engineer-mindset/">Senior Engineer Mindset with Swizec Teller</a></li>
-    <li><a href="/2023/inktober/">Inktober Retreats for 2023</a></li>
+    <li><a href="/2023/inktober/">Inktober2023 Retreats</a></li>
   </ul>
 
   <h3>Residencies</h3>
