more retreat types

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   </h3>
 
   <h4>
-    We run retreats for coding, illustration, writing, learning new skills, and
+    We run retreats for coding, illustration, sewing, quilting, writing, game development, learning new skills, and
     working groups.
   </h4>
 
