--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -3,6 +3,7 @@
 <a href="/recipe/">The Retreat Recipe</a>
 <a href="/what-to-expect/">What to Expect</a>
 <a href="/#program">The Program</a>
+<a href="/travel">Getting to FRC</a>
 <a href="/photos">Photos</a>
 <a href="/team">Team</a>
 <a href="/blog">Blog</a>
