Change images to 100% again except inktober

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,6 +34,10 @@
       {% block scripts -%}
       {% endblock scripts -%}
     </script>
+    <style>
+      {% block style -%}
+      {% endblock style -%}
+    </style>
     {% block opengraph -%}
     {# fallback default description #}
     {% set description = config.extra.company_name ~ " runs retreats for coding, illustration, writing, learning new skills, and working groups." %}
