update home page program for offsites and startup retreats

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,23 +77,28 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
 </section>
 
 <section class="centered-column bg-img-hills" id="program">
-  <h2>2023 Retreat Programs</h2>
-  <ul class="programs">
-    <li><a href="/2023/zines/">Tech Zines Retreat</a></li>
-    <li><a href="/2023/senior-engineer-mindset/">Senior Engineer Mindset with Swizec Teller</a></li>
-    <li><a href="/2023/inktober/">Inktober2023 Retreats</a></li>
-  </ul>
-
-  <h3>Residencies</h3>
+  <h2>Team Offsite Retreats</h2>
+  <p>Bring your team to FRC to kick off an ambitious new project or creatively explore possible future directions.</p>.
+  <h2>Startup Retreats</h2>
+  <p>Nothing will accellerate your startup faster than an intensive incubation/hackathon retreat. Bring the team together under one roof for in-person collaboration and high-bandwidth interactions.</p>.
+  <h2>Residencies</h2>
 
   <p>Need some time to do a batch of deep work on your project? Feeling burnt out and want to do some unstructured creative work? Feeling stuck in a rut and need a change of scene and pace? A residency at FRC may be just what you need!
   </p>
 
   <p>
-  Spring through Fall we offer individual and small group residencies alongside our group retreat programs. Email us at
-    <a href="mailto:team@focusretreatcenter.com?subject=Residency+Inquiry">team@focusretreatcenter.com</a>
-    if you might be interested.
+  Spring through Fall we offer individual and small group residencies alongside our group retreat programs.
   </p>
+  <hr>
+  <p>Email us at
+    <a href="mailto:team@focusretreatcenter.com?subject=Residency+Inquiry">team@focusretreatcenter.com</a>
+    and we can help you plan an amazing event.
+  </p>
+  <h2>2023 Retreat Programs</h2>
+  <ul class="programs">
+    <li><a href="/2023/inktober/">Inktober2023 Retreats</a></li>
+  </ul>
+
 </section>
 
 <section class="centered-column callout-text bg-light-blue">
