add swag image to inktober. Fix some trailing slashes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -116,9 +116,9 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   fits what you need is…
 
   <ol>
-    <li>Learn <a href="/values">Our Values</a></li>
-    <li>Check out <a href="/recipe">The Retreat Recipe</a></li>
-    <li>Know <a href="/what-to-expect">What to Expect on Your Retreat</a></li>
+    <li>Learn <a href="/values/">Our Values</a></li>
+    <li>Check out <a href="/recipe/">The Retreat Recipe</a></li>
+    <li>Know <a href="/what-to-expect/">What to Expect on Your Retreat</a></li>
   </ol>
 
   <img
