underdog devs landing page

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,6 +96,7 @@ home page #} {% block header -%}{% endblock -%} {% block main -%} {{ super() }}
   </p>
   <h2>2023 Retreat Programs</h2>
   <ul class="programs">
+    <li><a href="/2023/underdog-devs/">Underdog Devs Retreat</a></li>
     <li><a href="/2023/inktober/">Inktober2023 Retreats</a></li>
   </ul>
 
