more book now buttons on inktober page

--- a/templates/inktober.html
+++ b/templates/inktober.html
@@ -2,6 +2,10 @@
 {% block style -%}
 {{ super() }}
 {# as per special request from Mattie #}
+.book-now {
+  margin-bottom: 2em;
+}
+
 @media (min-width: 700px) {
   section.inktober img {
     max-width: 60%;
