Fix photo shortcode with zola 0.17.2 page.colocated_path

--- a/templates/shortcodes/photo.html
+++ b/templates/shortcodes/photo.html
@@ -1,5 +1,5 @@
 <figure class="photo">
-{% set image = resize_image(path=page.path ~ src, op="fit_width", width=800) %}
+{% set image = resize_image(path=page.colocated_path ~ src, op="fit_width", width=800) %}
 <img src="{{ image.url }}" alt="{{caption | trim}}"/>
    <figcaption>{{caption | trim}}</figcaption>
 </figure>
