add google tag for conversion tracking

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,6 +30,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     {% include "partials/mailchimp-head.html" %}
+    {% include "partials/google-tag.html" %}
     <script>
       {% block scripts -%}
       {% endblock scripts -%}
